--- a/package.json
+++ b/package.json
@@ -48,62 +48,62 @@
     "@react-navigation/stack": "6.2.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@ui-kitten/components": "^5.1.2",
-    "i18next": "21.6.15",
+    "i18next": "21.8.0",
     "react": "17.0.2",
-    "react-i18next": "11.16.5",
+    "react-i18next": "11.16.9",
     "react-native": "0.67.4",
-    "react-native-flipper": "^0.142.0",
-    "react-native-gesture-handler": "^2.3.2",
+    "react-native-flipper": "0.145.0",
+    "react-native-gesture-handler": "2.4.2",
     "react-native-localize": "2.2.1",
-    "react-native-reanimated": "2.4.1",
-    "react-native-safe-area-context": "^4.2.4",
+    "react-native-reanimated": "2.8.0",
+    "react-native-safe-area-context": "4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-version-number": "^0.3.6",
-    "react-redux": "^7.2.8",
+    "react-redux": "8.0.1",
     "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "typescript": "4.6.3",
+    "typescript": "4.6.4",
     "with-query": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "7.17.9",
-    "@babel/preset-env": "^7.16.11",
+    "@babel/core": "7.17.10",
+    "@babel/preset-env": "7.17.10",
     "@babel/runtime": "7.17.9",
     "@panz3r/react-native-toolbox": "^3.0.0",
     "@react-native-community/eslint-config": "3.0.1",
-    "@react-native-community/eslint-plugin": "^1.1.0",
+    "@react-native-community/eslint-plugin": "1.2.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "17.0.23",
+    "@types/jest": "27.5.0",
+    "@types/node": "17.0.31",
     "@types/react": "17.0.43",
-    "@types/react-native": "0.67.4",
+    "@types/react-native": "0.67.6",
     "@types/react-redux": "^7.1.23",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
-    "babel-jest": "27.5.1",
+    "@typescript-eslint/eslint-plugin": "5.22.0",
+    "@typescript-eslint/parser": "5.22.0",
+    "babel-jest": "28.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "husky": "7.0.4",
-    "jest": "27.5.1",
-    "lint-staged": "12.3.7",
+    "eslint-plugin-react-hooks": "4.5.0",
+    "husky": "8.0.0",
+    "jest": "28.1.0",
+    "lint-staged": "12.4.1",
     "madge": "^5.0.1",
-    "metro-react-native-babel-preset": "0.70.1",
+    "metro-react-native-babel-preset": "0.70.3",
     "npm-run-all": "^4.1.5",
     "prettier": "2.6.2",
     "pretty-quick": "^3.1.3",
     "react-native-debugger-open": "^0.3.25",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "18.1.0",
     "remote-redux-devtools": "^0.5.16",
     "shx": "^0.3.4",
-    "ts-jest": "27.1.4"
+    "ts-jest": "28.0.2"
   },
   "jest": {
     "preset": "react-native"
