--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/lodash": "^4.14.200",
     "@types/metro-config": "^0.76.3",
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.24",
