--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-starter-app",
-  "version": "7.0.1",
+  "version": "7.1.0",
   "private": true,
   "scripts": {
     "test": "jest",
@@ -40,36 +40,41 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.15",
+    "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "1.9.7",
+    "@tamagui/shorthands": "^1.78.0",
+    "@tamagui/themes": "^1.78.0",
     "axios": "^0.27.2",
     "i18next": "^22.5.0",
     "lodash": "^4.17.21",
-    "native-base": "3.4.28",
     "react": "18.2.0",
     "react-i18next": "^12.3.1",
     "react-native": "0.72.6",
     "react-native-bootsplash": "^4.7.1",
     "react-native-indicators": "^0.17.0",
-    "react-native-localize": "^3.0.0",
-    "react-native-mmkv": "^2.8.0",
-    "react-native-safe-area-context": "^4.5.3",
-    "react-native-screens": "^3.20.0",
+    "react-native-localize": "^3.0.3",
+    "react-native-mmkv": "^2.11.0",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0",
-    "react-native-vector-icons": "^10.0.0",
+    "react-native-toast-message": "^2.1.7",
+    "react-native-vector-icons": "^10.0.2",
     "react-native-version-number": "^0.3.6",
     "react-redux": "8.1.3",
     "redux-persist": "^6.0.0",
-    "redux-saga": "1.2.3"
+    "redux-saga": "1.2.3",
+    "tamagui": "^1.78.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@forward-software/react-native-toolbox": "^3.0.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/react-native": "^3.0.0",
     "@types/lodash": "^4.14.200",
     "@types/metro-config": "^0.76.3",
